started the resume

--- a/assets/junk/startertemplate.html
+++ b/assets/junk/startertemplate.html
@@ -6,5 +6,12 @@
     <button type="button" mat-button (click)="drawer.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
+    <section class="columns">
+      <div class="column">
+
+      </div>
+      <div class="column">
+      </div>
+    </section>
   </div>
 </mat-drawer-container>
